--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,9 @@ html, body{
   padding: 30px;
   background: #fff;
   border-radius: 25px;
+  margin-bottom: 15px;
 }
+
 h1{
   font-size: 50px;
   font-weight: bold;
